fixed spacing

--- a/styles/__hero.scss
+++ b/styles/__hero.scss
@@ -4,6 +4,7 @@
     background-position:center;
     background-size:70%;
     background-position-x: 50px;
+    margin-top: 0px;
 
 }
 
